force-app/main/default/objects/FundingBatchCapitalExpenditure__c/FundingBatchCapitalExpenditure__c.object-meta.xml
<CustomObject>
    <description>Junctions Additional Capital Expenditure type and Batches to specify the cost and quantity of capital expenditures logged against a batch</description>
    <label>Additional Capital Expenditure</label>
    <nameField>
        <displayFormat>BCE-{00000}</displayFormat>
        <label>Expenditure Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Capital Expenditures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>