force-app/main/default/objects/FundingBatchCapitalExpenditure__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <label>Batch</label>
    <referenceTo>FundingBatch__c</referenceTo>
    <relationshipName>Capital_Expenditures</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>