force-app/main/default/objects/FundingBatchCapitalExpenditure__c/fields/Capital_Expenditure_Type__c.field-meta.xml
<CustomField>
    <fullName>Capital_Expenditure_Type__c</fullName>
    <label>Additional Capital Expenditure Type</label>
    <referenceTo>FundingCapitalExpenditureType__c</referenceTo>
    <relationshipLabel>Additional Capital Expenditures</relationshipLabel>
    <relationshipName>Batch_Capital_Expenditures</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>