force-app/main/default/objects/FundingBatchCapitalExpenditure__c/fields/Capital_Expenditure_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Capital_Expenditure_Type_Name__c</fullName>
    <description>Needed for config</description>
    <formula>Capital_Expenditure_Type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Capital Expenditure Type Name</label>
    <type>Text</type>
</CustomField>