force-app/main/default/objects/FundingBatchCapitalExpenditure__c/fields/Total_number__c.field-meta.xml
<CustomField>
    <fullName>Total_number__c</fullName>
    <inlineHelpText>Total number for the selected item/s</inlineHelpText>
    <label>Total number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>